--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <script src="./index.js" defer></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <simple-greeting name="Everyone"></simple-greeting>
-    <p>Simple greeting is missing</p>
+    <nav-header></nav-header>
+    <container-element name="Everyone"></container-element>
   </body>
 </html>
