display all books

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
         <option value="sort">Sort</option>
       </select>
     </div>
-    <container-element name="Everyone"></container-element>
+    <container-element></container-element>
   </body>
 </html>
