add icons for search and cart

--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
         margin-bottom: 10px;
       }
     </style>
-
-    <nav-header></nav-header>
-    <h1 class="header">Children's Book</h1>
-    <div class="subtitle">
-      <h4>Ages 3-5</h4>
-      <select>
-        <option value="sort">Sort</option>
-      </select>
+    <div class="container">
+      <nav-header></nav-header>
+      <h1 class="header">Children's Book</h1>
+      <div class="subtitle">
+        <h4>Ages 3-5</h4>
+        <select>
+          <option value="sort">Sort</option>
+        </select>
+      </div>
+      <container-element></container-element>
     </div>
-    <container-element></container-element>
   </body>
 </html>
